--- a/01-jpa-hibernate/pom.xml
+++ b/01-jpa-hibernate/pom.xml
@@ -32,11 +32,11 @@
         </dependency>
 
         <!-- Mysql and MariaDB -->
-        <dependency>
+<!--        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.11</version>
-        </dependency>
+        </dependency>-->
         <!--openjpa-->
         <dependency>
             <groupId>org.apache.openjpa</groupId>
