--- a/01-jpa-hibernate/pom.xml
+++ b/01-jpa-hibernate/pom.xml
@@ -31,13 +31,20 @@
             <version>5.4.32.Final</version>
         </dependency>
 
+        <!-- Mysql and MariaDB -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
+        </dependency>
         <!--openjpa-->
         <dependency>
             <groupId>org.apache.openjpa</groupId>
             <artifactId>openjpa-all</artifactId>
             <version>3.2.0</version>
         </dependency>
-
+        
+        
         <!-- database change to postgresql -->
         <dependency>
 			<groupId>org.postgresql</groupId>
