--- a/02-springdata-jpa/pom.xml
+++ b/02-springdata-jpa/pom.xml
@@ -38,13 +38,6 @@
             <version>5.4.32.Final</version>
         </dependency>
 
-        <!-- Mysql and MariaDB -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.49</version>
-        </dependency>
-
         <!--连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -66,9 +59,14 @@
             <artifactId>querydsl-jpa</artifactId>
             <version>${querydsl.version}</version>
         </dependency>
-        
-  
- 
+
+
+        <!-- database change to postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.25</version>
+        </dependency>
 
     </dependencies>
 
