--- a/01-jpa-hibernate/pom.xml
+++ b/01-jpa-hibernate/pom.xml
@@ -44,8 +44,20 @@
 			<artifactId>postgresql</artifactId>
 	        <version>42.2.25</version>
 	    </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.1.Final</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>compile</scope>
+        </dependency>
 
- 
+
     </dependencies>
 
 </project>
